--- a/assets/style.css
+++ b/assets/style.css
@@ -32,3 +32,14 @@ body {
     margin: 10px 0 10px 0;
     color: #f6f6f6;
 }
+
+.option {
+    width: 470px;
+    display: inline-block;
+    padding: 10px 0 10px 15px;
+    vertical-align: middle;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 10px 0 10px 10px;
+    color: #000000;
+    border-radius: 20px;
+}
