--- a/assets/style.css
+++ b/assets/style.css
@@ -66,6 +66,23 @@ body {
     color: #f6f6f6;
 }
 
+.startButton {
+    border: none;
+    outline: none;
+    background: rgba(255, 25, 255, 0.5);
+    width: 100px;
+    height: 35px;
+    border-radius: 20px;
+    cursor: pointer;
+    float: right;
+    margin: 10px;
+}
+
+.startButton:hover{
+    background: #08038C;
+    color: #f6f6f6;
+}
+
 .result {
     height: 100px;
     text-align: center;
